--- a/index.html
+++ b/index.html
@@ -18,47 +18,24 @@
       height: 90vh;
       background-color: #ffffff;
     }
-    .ar-button {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      padding: 10px 20px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
 
   <model-viewer 
     id="viewer"
-    src="https://yourwebsite.com/path/to/my_model.glb"
+    src="https://yourwebsite.com/path/to/my_model.glb"  <!-- Замініть на правильний шлях до вашої моделі -->
     alt="3D Модель"
     auto-rotate
     camera-controls
     ar
-    ar-modes="webxr scene-viewer quick-look"
-    ar-placement="floor"
-    ar-scale="auto"
+    ar-modes="webxr scene-viewer quick-look"  <!-- Підтримка різних режимів AR -->
+    ar-placement="floor"  <!-- Розміщення моделі на підлозі -->
+    ar-scale="auto"  <!-- Автоматичний масштаб моделі -->
+    ar-status="full-screen"  <!-- Режим повноекранного AR -->
     shadow-intensity="1"
     exposure="1">
   </model-viewer>
-
-  <!-- Кнопка для активації AR -->
-  <button class="ar-button" onclick="activateAR()">Переглянути в AR</button>
-
-  <script>
-    function activateAR() {
-      const viewer = document.querySelector('model-viewer');
-      if (viewer && viewer.enterAR) {
-        viewer.enterAR(); // Вхід в режим AR
-      }
-    }
-  </script>
 
 </body>
 </html>
