--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Перегляд 3D Моделі в AR</title>
+  <title>Перегляд 3D Моделі</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
@@ -24,13 +24,11 @@
 
   <model-viewer 
     id="viewer"
-    src="my_model.glb" 
-    alt="3D Модель" 
-    auto-rotate 
-    camera-controls 
-    ar 
-    ar-modes="webxr scene-viewer quick-look" 
-    shadow-intensity="1" 
+    src="https://yourwebsite.com/path/to/my_model.glb"  <!-- Заміни на правильний шлях до твоєї моделі -->
+    alt="3D Модель"
+    auto-rotate
+    camera-controls
+    shadow-intensity="1"
     exposure="1">
   </model-viewer>
 
