--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Перегляд 3D Моделі</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
@@ -15,7 +16,7 @@
     }
     model-viewer {
       width: 100%;
-      height: 90vh;
+      height: 80vh;
       background-color: #ffffff;
     }
   </style>
@@ -23,13 +24,13 @@
 <body>
 
   <model-viewer 
-    id="viewer"
-    src="https://yourwebsite.com/path/to/my_model.glb"  <!-- Заміни на правильний шлях до твоєї моделі -->
+    src="https://yourwebsite.com/path/to/my_model.glb"  <!-- Замініть на правильний шлях до твоєї моделі -->
     alt="3D Модель"
     auto-rotate
     camera-controls
     shadow-intensity="1"
-    exposure="1">
+    exposure="1"
+    style="width: 100%; height: 80vh;">
   </model-viewer>
 
 </body>
