--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
     }
     model-viewer {
       width: 100%;
-      height: 80vh;
-      background-color: #ffffff;
+      height: 80vh; /* або 100vh для мобільних */
     }
   </style>
 </head>
 <body>
 
   <model-viewer 
-    src="https://yourwebsite.com/path/to/my_model.glb"  <!-- Замініть на правильний шлях до твоєї моделі -->
+    src="https://yourwebsite.com/path/to/my_model.glb" <!-- Замінити на правильний шлях -->
     alt="3D Модель"
     auto-rotate
     camera-controls
