--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Перегляд 3D Моделі</title>
+  <title>Перегляд 3D Моделі в AR</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
@@ -16,20 +15,23 @@
     }
     model-viewer {
       width: 100%;
-      height: 80vh; /* або 100vh для мобільних */
+      height: 90vh;
+      background-color: #ffffff;
     }
   </style>
 </head>
 <body>
 
   <model-viewer 
-    src="https://yourwebsite.com/path/to/my_model.glb" <!-- Замінити на правильний шлях -->
-    alt="3D Модель"
-    auto-rotate
-    camera-controls
-    shadow-intensity="1"
-    exposure="1"
-    style="width: 100%; height: 80vh;">
+    id="viewer"
+    src="my_model.glb" 
+    alt="3D Модель" 
+    auto-rotate 
+    camera-controls 
+    ar 
+    ar-modes="webxr scene-viewer quick-look" 
+    shadow-intensity="1" 
+    exposure="1">
   </model-viewer>
 
 </body>
