--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Перегляд 3D Моделі в AR</title>
+  <title>Перегляд 3D Моделі</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
@@ -21,9 +21,7 @@
   </style>
 </head>
 <body>
-
   <model-viewer 
-    id="viewer"
     src="my_model.glb" 
     alt="3D Модель" 
     auto-rotate 
@@ -33,6 +31,5 @@
     shadow-intensity="1" 
     exposure="1">
   </model-viewer>
-
 </body>
 </html>
