--- a/diza/chair/dear-1/index.html
+++ b/diza/chair/dear-1/index.html
@@ -1,81 +1,86 @@
-
-
 <!DOCTYPE html>
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Перегляд моделі в AR</title>
+  <title>Перегляд 3D моделі в AR</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
-    body {
+    body, html {
+      height: 100%;
       margin: 0;
-      background-color: #f0f0f0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f0f4f8;
       display: flex;
       flex-direction: column;
+      justify-content: center;
       align-items: center;
-      font-family: Arial, sans-serif;
-      height: 100vh;
-      overflow: hidden;
     }
-    h1 {
-      font-size: 24px;
-      margin: 20px 0;
-    }
+
     model-viewer {
-      width: 100%;
-      max-width: 600px;
+      width: 90%;
       height: 70vh;
-      background-color: white;
+      max-width: 800px;
+      border-radius: 15px;
+      box-shadow: 0 12px 24px rgba(0,0,0,0.2);
+      background-color: #fff;
     }
+
     .ar-button {
-      display: inline-block;
+      padding: 12px 25px;
       margin-top: 20px;
-      padding: 15px 30px;
-      font-size: 18px;
-      font-weight: bold;
-      color: white;
-      background-color: #007BFF;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
+      background-color: #007bff;
+      color: #fff;
       text-decoration: none;
-      transition: background-color 0.3s ease;
+      border-radius: 8px;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+      transition: transform 0.2s, background-color 0.2s;
     }
+
     .ar-button:hover {
+      transform: translateY(-3px);
       background-color: #0056b3;
+    }
+
+    .hint {
+      margin-top: 10px;
+      font-size: 16px;
+      color: #333;
+      text-align: center;
+    }
+
+    @media (max-width: 600px) {
+      .hint {
+        font-size: 14px;
+        padding: 0 10px;
+      }
+
+      .ar-button {
+        width: 80%;
+        text-align: center;
+      }
     }
   </style>
 </head>
 <body>
 
-  <h1>Переглянути у вашій кімнаті!</h1>
-
-  <model-viewer
-    id="modelViewer"
-    src="DEAR.glb"
-    ar
-    ar-modes="scene-viewer webxr quick-look"
-    camera-controls
-    autoplay
-    shadow-intensity="1"
-    exposure="1"
-    alt="3D модель"
-    environment-image="neutral"
-    style="background-color: #ffffff;">
+  <model-viewer src="./my_model.glb"
+                ar
+                ar-modes="webxr scene-viewer quick-look"
+                camera-controls
+                auto-rotate
+                shadow-intensity="1"
+                alt="3D модель">
   </model-viewer>
 
-  <!-- Гарна кнопка для запуску AR -->
-  <button class="ar-button" id="arButton">Переглянути в AR</button>
+  <a href="#" class="ar-button" onclick="document.querySelector('model-viewer').activateAR()">
+    Переглянути в AR
+  </a>
 
-  <script>
-    const modelViewer = document.getElementById('modelViewer');
-    const arButton = document.getElementById('arButton');
-
-    arButton.addEventListener('click', () => {
-      modelViewer.activateAR();
-    });
-  </script>
+  <div class="hint">
+    Натисніть кнопку, щоб переглянути модель у доповненій реальності.
+  </div>
 
 </body>
 </html>
