--- a/diza/chair/dear-1/index.html
+++ b/diza/chair/dear-1/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
 
-  <model-viewer src="./my_model.glb"
+  <model-viewer src="./DEAR.glb"
                 ar
                 ar-modes="webxr scene-viewer quick-look"
                 camera-controls
