--- a/diza/chair/dear-1/index.html
+++ b/diza/chair/dear-1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Перегляд 3D моделі в AR</title>
+  <title>Просмотр 3D модели в AR</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body, html {
@@ -79,7 +79,7 @@
   </a>
 
   <div class="hint">
-    Натисніть кнопку, щоб переглянути модель у доповненій реальності.
+    Нажмите кнопку для просмотра модели в дополненной реальности.
   </div>
 
 </body>
