--- a/diza/chair/dear-1/index.html
+++ b/diza/chair/dear-1/index.html
@@ -75,7 +75,7 @@
   </model-viewer>
 
   <a href="#" class="ar-button" onclick="document.querySelector('model-viewer').activateAR()">
-    Переглянути в AR
+    Посмотреть в AR
   </a>
 
   <div class="hint">
